# beep2

./: ChangeLog  LICENSE  configure.in
doc/: HISTORY
man/: Makefile.am
man/en/: Makefile.am
man/ja/: Makefile.am
src/: Makefile.am  beep.c  beep.h  log.c  main.c  parse_f.c  parse_s.c  s2f.c  usage.c  version.c
